# twitter_clone

./: .gitignore  README.md  pyproject.toml
twitter_clone/accounts/: admin.py  forms.py  models.py
twitter_clone/accounts/migrations/: 0001_initial.py  0002_remove_relationship_user_remove_user_follower_count_and_more.py
twitter_clone/api/: permissions.py  serializers.py  urls.py  views.py
twitter_clone/tweets/: admin.py  models.py
twitter_clone/tweets/migrations/: 0001_initial.py  0002_remove_tweet_coment_of_remove_tweet_comments_count_and_more.py  0003_tweet_coment.py  0004_rename_coment_tweet_comment.py
twitter_clone/twitter_clone/: settings.py  urls.py
